Fixes back card issue on Firefox browser

--- a/src/App.css
+++ b/src/App.css
@@ -31,6 +31,7 @@
   padding: 1rem;
   color: black;
   backface-visibility: hidden;
+  transform: rotateX(0deg)
 }
 
 .front {
